mark the Driver for Frank Mori Hess' FPGA based PCI board as BROKEN
Signed-off-by: Stephen Rothwell <sfr@canb.auug.org.au>

--- a/drivers/staging/gpib/Kconfig
+++ b/drivers/staging/gpib/Kconfig
@@ -131,6 +131,7 @@ config GPIB_FMH
        select GPIB_COMMON
        select GPIB_NEC7210
        depends on OF && PCI
+       depends on BROKEN
        help
          GPIB driver for fmhess FPGA based devices
 
